--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,7 +85,9 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:$dataStoreVersion"
 
     // Weather
-    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.5.0'
 }
 
 kapt {
